--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,41 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-title>
-      Tab 1
+      Simples
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" color="dark">
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-card> 
+   <ion-item>
+    <ion-label position="floating">Primeiro valor</ion-label>
+    <ion-input type="number" [(ngModel)]="primeiroValor"></ion-input>
+    </ion-item>
+
+   <ion-item>
+    <ion-label position="floating">Segundo valor</ion-label>
+    <ion-input type="number" [(ngModel)]="segundoValor"></ion-input>
+   </ion-item>
+
+  </ion-card>
+
+  <ion-card>
+    <ion-item color="secondary">
+      <ion-label>RESULTADO:</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label class="resultado">{{resultado}}</ion-label>
+    </ion-item>
+  </ion-card>
+
+  <ion-card color="secondary">
+    <ion-button (click)="somar()" color="dark" expand="block">SOMA (+)</ion-button>
+    <ion-button (click)="subtrair()" color="dark" expand="block">SUBTRAIR (-)</ion-button>
+    <ion-button (click)="dividir()" color="dark" expand="block">DIVIDIR (/)</ion-button>
+    <ion-button (click)="multiplicar()" color="dark" expand="block">MULTIPLICAR (*)</ion-button>
+    <br>
+    <ion-button (click)="limpar()" color="dark" expand="block">LIMPAR</ion-button>
+  </ion-card>
 </ion-content>
