--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,98 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="tertiary">
     <ion-title>
-      Tab 2
+      Normal
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+ 
+  <ion-card color="dark">
+    <ion-item color="dark" class="ion-text-right">
+      <ion-label>{{calculo}}</ion-label>
+    </ion-item>
+    <ion-item color="dark" >
+      <span class="resultado">=</span>
+      <ion-label class="ion-text-right resultado">{{resultado}}</ion-label>
+    </ion-item>
+  </ion-card>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-card color="dark">
+
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="apagarTudo()" expand="block">C</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button expand="block">DEL</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarPonto()"expand="block">.</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarOperacao('/')" expand="block">/</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('7')" expand="block">7</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('8')" expand="block">8</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('9')"expand="block">9</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarOperacao('*')" expand="block">*</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('4')" expand="block">4</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('5')" expand="block">5</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('6')" expand="block">6</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarOperacao('-')" expand="block">-</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('1')" expand="block">1</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('2')" expand="block">2</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('3')" expand="block">3</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarOperacao('+')" expand="block">+</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-button expand="block">?</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="adicionarNumero('0')" expand="block">0</ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-button expand="block">=</ion-button>
+        </ion-col>
+      </ion-row>
+
+    </ion-grid>    
+  </ion-card>
 </ion-content>
